Subindo os arquivos para o git

--- a/index.html
+++ b/index.html
@@ -1,51 +1,121 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gilberto Gaspar (beto) </title>
-        <link rel="shortcut icon" href="favicon.ico"> 
-    </head>
 
-    <body>
-        <h1> Seja bem Vindo, ao meu portfólio web!</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gilberto Gaspar (beto) </title>
+    <link rel="stylesheet" href="style.css">
 
-        <h4>Índice</h4>
-        <ul>
-            <li><a href="#Apresentacao">Apresentação</a></li>
-            <li><a href="#Habilidades">Minhas habilidades</a></li>
-            <li> <a href="#Links"> Conheça meu Linkedin e GitHub</a></li>
-        </ul>
+</head>
 
-<h4 id="Apresentacao"> Olá! Me chamo Gilberto gaspar, que bom que veio até aqui!</h4>
-        <p> neste espaço voce poderá conhecer um pouco sobre mim e minhas habilidades</p>
+<body>
+    <header>
+        <div class="imagem-trybe">
+            <img src="images/trybe.png" alt="Logo trybe">
+        </div>
+        <nav>
+
+            <ul>
+
+                <li><a href="#Apresentacao">Apresentação</a></li>
+                <li><a href="#Habilidades">Minhas habilidades</a></li>
+                <li> <a href="#Links"> Conheça meu Linkedin e GitHub</a></li>
+            </ul>
+
+        </nav>
+    </header>
+
+
+    <div class="container">
+
+
         <img id="Imagem" src="images/me.jpeg" alt="Em um fundo escuro, gilberto está sorrindo, usa óculos e tem cabelos e olhos castanhos." width="250 px">
-<p> Paulista, estudante de desenvolvimento web na Trybe, pai de menina, amante de jogos, filmes, e viagens. <br> Gosto de me desafiar, e a cada dia que passa percebo que amo a área que estou estudando. </p>
 
-<h4 id="habilidades"> Habilidades </h4>
-<p> <em>Entre as habilidades que tenho em Soft Skills estão:</em> </p>
-<ul>
-    <li>Pensamento Criativo</li>
-    <li>Facilidade em Aprender</li>
-    <li>Empatia</li>
-    <li>Liderança</li>
-    <li>Trabalho em equipe</li>
-    <li>Proatividade</li>
-</ul>
+        <div class="Apresentacao">
+            <h1 id="Apresentacao"> Gilberto Gaspar</h1>
+        </div>
 
-<p> <em>Entre as habilidades que estou desenvolvendo no momento em Hard Skills estão:</em> </p>
-<ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>JavaScript</li> 
-</ul>
-
-<h4 id="Links">Conheça meus projetos mais de perto!</h4>
-<p><a href="#Imagem">Esse de oculos logo acima sou eu!!</a> Se você, como eu, gosta de games, programação e séries, te indico esse <a href="https://jovemnerd.com.br/"target="_blank"> site</a><br>
-Mas, se quiser conhecer meu Linkedin e ficar por dentro do que compartilho por lá, é só clicar <a href="https://www.linkedin.com/in/gilberto-gaspar-17b886112/" target="_blank"> aqui.</a> <br>
-    Se você quiser dar uma olhada nos exercícios e projetos que desenvolvo na <a href="https://www.betrybe.com/"target="_blank">Trybe</a>, basta clicar <a href="https://github.com/betogaspar"target="_blank">aqui</a> e entrar no meu Repositório do GitHub. </p>
+        <div class="texto">
+            <p> Paulista, estudante de desenvolvimento web na Trybe, pai de menina, amante de jogos, filmes, e viagens.
+                <br> Gosto de me desafiar, e a cada dia que passa percebo que amo a área que estou estudando.
+            </p>
+        </div>
 
 
 
-    </body>
+        <div class="Habilidades">
+            <h4 id="Habilidades"> Habilidades </h4>
+        </div>
+
+        <div class="texto">
+            <p> <em>Entre as habilidades que estou desenvolvendo em <strong> Soft Skills</strong> estão:</em> </p>
+        </div>
+
+
+        <div class="lista-habilidades">
+            <ul>
+                <li>Pensamento Criativo</li>
+                <li>Facilidade em Aprender</li>
+                <li>Empatia</li>
+                <li>Liderança</li>
+                <li>Trabalho em equipe</li>
+                <li>Proatividade</li>
+            </ul>
+        </div>
+        <div class="texto">
+            <p> <em>Entre as habilidades que estou desenvolvendo no momento em <strong>Hard Skills </strong>estão:</em>
+            </p>
+
+        </div>
+
+
+        <div class="lista-texto">
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+            </ul>
+        </div>
+
+        <div class="texto">
+            <p><a href="#Imagem">Esse de oculos logo acima sou eu!!</a> Se você, como eu, gosta de games, programação e séries, te indico esse <a href="https://jovemnerd.com.br/" target="_blank"> site</a><br> Se você quiser dar uma olhada nos exercícios
+                e projetos que desenvolvo na <a href="https://www.betrybe.com/" target="_blank">Trybe</a>, basta acessar meu repositório do GitHub, meu linkedin e para contatos meu e-mail. </p>
+
+        </div>
+
+
+
+
+        <div class="links">
+
+            <h4 id="Links">Conheça meus projetos mais de perto!</h4>
+
+        </div>
+
+        <div class="informacoes-pessoais">
+            <a href="https://www.linkedin.com/in/gilberto-gaspar-17b886112/" target="_blank">
+                <img src="images/linkedin.png" alt="linkedin" width="50px">
+            </a>
+
+            <a href="https://github.com/betogaspar" target="_blank">
+                <img src="images/github.png" alt="github" width="50px">
+
+            </a>
+
+            <a href="mailto:gilberto.sgaspar@gmail.com" target="_blank">
+                <img src="images/mail.png" alt="mail" width="50px">
+
+            </a>
+        </div>
+        <div class="direitos">
+
+            <p>
+                © 2021, made with HTML and CSS by Gilberto Gaspar.
+            </p>
+        </div>
+
+
+    </div>
+</body>
