--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 <body>
     <header>
         <div class="imagem-trybe">
-            <img src="images/trybe.png" alt="Logo trybe">
+            <a href="https://www.betrybe.com/" target="_blank">
+                <img src="images/trybe.png" alt="Logo trybe">
+            </a>
+
+
         </div>
         <nav>
 
